--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dev = [
     "bandit>=1.8.6",
     "pre-commit>=3.8.0",
     "pywal>=3.3.0",
+    "mkdocs-material",
 ]
 
 # Tool configuration (shared across workspace)
