--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ Thumbs.db
 .mypy_cache/
 .ruff_cache/
 bandit-report.json
+site/
 
 # Development reference documents (generated during implementation)
 DRY_RUN_*.md
