chore: pin mkdocs-material to compatible 9.x range

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dev = [
     "bandit>=1.8.6",
     "pre-commit>=3.8.0",
     "pywal>=3.3.0",
-    "mkdocs-material",
+    "mkdocs-material>=9.5,<10",
 ]
 
 # Tool configuration (shared across workspace)
